typescript/checker/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement1.ts.stderr
error: TS1105
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement1.ts:1:1
  |
1 | continue;
  | ^^^^^^^^^

